# mmcg

./: .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml
configs/: audio_only.json  multimodal.json  text_only.json
data/cb/: annotations.jsonl  opensmile.csv
src/core/: app.py  context.py  df.py  functional.py  nvidia.py  path.py  slurm.py
src/data/: commitment_bank.py
src/models/: multimodal_classifier.py
