[tool.poetry]
name = "mmcg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = "2.0.0"
transformers = "^4.37.2"
evaluate = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
pre-commit = "^3.6.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
